<resources>
    <string name="app_name">P-Reserve</string>
    <string name="id_num">ID Number</string>
    <string name="student_num">Student Number</string>
    <string name="course">Course</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="idNumOrStudNum">ID Number</string>
    <string name="startingTime">Starting Time</string>
    <string name="room">Room</string>
    <string name="section">Section</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
