<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startingTime"
        android:id="@+id/tvTimeFrom_Temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:id="@+id/tvRoom_Temp"
        android:layout_below="@+id/tvTimeFrom_Temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section"
        android:id="@+id/tvSection_Temp"
        android:layout_below="@+id/tvRoom_Temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>