<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.angel.android_weeklyproject1_montoya_narag_pascual.RegistrationStudent">

    <Button
        android:id="@+id/btBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="Back"
        android:background="@drawable/buttonred"
        android:textColor="@color/white"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:onClick="backToRegisterShell" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/tvRegisterAdmin"
        android:textSize="24sp"
        android:textColor="@color/brightred"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEXT"
        android:id="@+id/btNextToWelcomeStud"
        android:layout_alignBottom="@+id/tvRegisterAdmin"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonred"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:onClick="registerAccountStudent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStudNumReg"
        android:layout_below="@+id/btBackToMain"
        android:hint="@string/student_num"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp" >
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStudLastnameReg"
        android:layout_marginTop="20dp"
        android:hint="@string/lastname"
        android:layout_below="@+id/etStudNumReg"
        android:layout_alignRight="@+id/btNextToWelcomeStud"
        android:layout_alignEnd="@+id/btNextToWelcomeStud" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStudFirstnameReg"
        android:layout_marginTop="20dp"
        android:hint="@string/firstname"
        android:layout_below="@+id/etStudLastnameReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCourseStudReg"
        android:layout_below="@+id/etStudFirstnameReg"
        android:layout_alignParentLeft="true"
        android:hint="@string/course"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPasswordStudReg"
        android:hint="@string/password"
        android:layout_below="@+id/etCourseStudReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etConfirmPassStud"
        android:layout_below="@+id/etPasswordStudReg"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:hint="@string/confirmPassword"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
