<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.angel.android_weeklyproject1_montoya_narag_pascual.RegistrationAdmin">

    <Button
        android:id="@+id/btBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="Back"
        android:background="@drawable/buttonred"
        android:textColor="@color/white"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:onClick="backToRegisterShell" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/tvRegisterAdmin"
        android:textSize="24sp"
        android:textColor="@color/brightred"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp" />

    <Button
        android:id="@+id/btNextToWelcomePage"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="NEXT"
        android:layout_alignParentTop="true"
        android:background="@drawable/buttonred"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="registerAccountAdmin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etIDNumRegAdmin"
        android:layout_below="@+id/btBackToMain"
        android:layout_marginTop="71dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btNextToWelcomePage"
        android:hint="@string/id_num"
        android:layout_alignEnd="@+id/btNextToWelcomePage" >
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etLastnameAdminReg"
        android:layout_below="@+id/etIDNumRegAdmin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:hint="@string/lastname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstnameAdminReg"
        android:layout_below="@+id/etLastnameAdminReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:hint="@string/firstname"
        android:layout_alignRight="@+id/btNextToWelcomePage"
        android:layout_alignEnd="@+id/btNextToWelcomePage" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPasswordRegAdmin"
        android:layout_marginTop="29dp"
        android:hint="@string/password"
        android:layout_below="@+id/etFirstnameAdminReg"
        android:layout_alignRight="@+id/btNextToWelcomePage"
        android:layout_alignEnd="@+id/btNextToWelcomePage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etConfirmPassAdmin"
        android:layout_below="@+id/etPasswordRegAdmin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:hint="@string/confirmPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
